<resources>
    <string name="app_name">StoryApp</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_to_app_story">Welcome to\nApp Story</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="welcome_back_login">Welcome Back\nLogin</string>
    <string name="hello_beautiful_nsign_up">Hello Beautiful\nSign Up</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="post">Post</string>
    <string name="profil">Profil</string>
    <string name="_1000_follower">1000 Follower</string>
    <string name="image">Image</string>
    <string name="image_story">Image_Story</string>
    <string name="upload">Upload</string>
    <string name="galery">Galery</string>
    <string name="camera_x">Camera_X</string>
    <string name="warning">Password must be at least 8 characters</string>
    <string name="maps">Maps</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="retry">Retry</string>
    <string name="add_location">Add Location</string>
</resources>